--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,6 +48,9 @@
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
   html={},
   pdf={Nonlinear.pdf},
+  altmetric={248277},
+  dimensions={true},
+  google_scholar_id={qyhmnyLat1gC},
 }
 
 @article{einstein1905molekularkinetischen,
