--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -51,6 +51,7 @@
   altmetric={248277},
   dimensions={true},
   google_scholar_id={qyhmnyLat1gC},
+  selected={true}
 }
 
 @article{einstein1905molekularkinetischen,
