--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,8 +46,8 @@
   numpages={0},
   doi={10.1103/PhysRev.47.777},
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={},
-  pdf={Nonlinear.pdf},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
   altmetric={248277},
   dimensions={true},
   google_scholar_id={qyhmnyLat1gC},
