--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,8 +44,8 @@
   issue={10},
   pages={777--780},
   numpages={0},
-  year={},
-  month={},
+  year={1935},
+  month={May},
   doi={10.1103/PhysRev.47.777},
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
@@ -53,7 +53,6 @@
   altmetric={248277},
   dimensions={true},
   google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
   annotation={* Example use of superscripts<br>† Albert Einstein},
   selected={true}
 }
