--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -49,6 +49,10 @@
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
   pdf={example_pdf.pdf},
   altmetric={248277},
+  dimensions={true},
+  google_scholar_id={qyhmnyLat1gC},
+  annotation={* Example use of superscripts<br>† Albert Einstein},
+  selected={true}
 }
 
 @article{einstein1905molekularkinetischen,
