--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,7 +44,7 @@
   issue={10},
   pages={777--780},
   numpages={0},
-  year={ASME 2024 International Mechanical Engineering Congress and Exposition},
+  year={2024},
   doi={10.1103/PhysRev.47.777},
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
