--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,12 +33,11 @@
   publisher={American Association of Physics Teachers}
 }
 
-@article{PhysRev.47.777,
+@article{PhysRev,
   title={Nonlinear Vibration and Bifurcations of  a Bending-Twisting Rotor System},
   author={Yuanhao Chen, Bin Chen, Xinya Wang, Yeyin Xu, and Tieyan Wang},
   publisher={ASME 2024 International Mechanical Engineering Congress and Exposition},
   preview={1.webp},
-  journal={Phys. Rev.},
   volume={47},
   issue={10},
   pages={777--780},
