--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,7 +35,7 @@
 
 @article{PhysRev,
   title={Nonlinear Vibration and Bifurcations of  a Bending-Twisting Rotor System},
-  author={Yuanhao Chen, Bin Chen, Xinya Wang, Yeyin Xu, and Tieyan Wang},
+  author={Yuanhao, Chen and Bin, Chen and Xinya, Wang and Yeyin, Xu and Tieyan, Wang},
   publisher={ASME 2024 International Mechanical Engineering Congress and Exposition},
   preview={1.webp},
   volume={47},
