--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,6 +34,7 @@
 }
 
 @article{PhysRev,
+  abbr={IMECE},
   title={Nonlinear Vibration and Bifurcations of  a Bending-Twisting Rotor System},
   author={Yuanhao, Chen and Bin, Chen and Xinya, Wang and Yeyin, Xu and Tieyan, Wang},
   publisher={ASME 2024 International Mechanical Engineering Congress and Exposition},
@@ -45,7 +46,39 @@
   year={2024},
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
+  pdf={Nonlinear.pdf},
+}
+
+@article{Rhythms,
+  abbr={IMECE},
+  title={A Novel Model for Heart Beating Rhythms},
+  author={Yuanhao, Chen and Xinya, Wang and Yeyin, Xu},
+  publisher={ASME 2024 International Mechanical Engineering Congress and Exposition},
+  preview={2.webp},
+  volume={47},
+  issue={10},
+  pages={777--780},
+  numpages={0},
+  year={2024},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={Rhythms.pdf},
+}
+
+@article{Assistive,
+  abbr={EWA},
+  title={Clairvoyance - Vision-Impaired Friendly Assistive Mobile Device},
+  author={Yuanhao, Chen and Ziyu, Zhan},
+  publisher={Applied and Computational Engineering},
+  preview={3.webp},
+  volume={47},
+  issue={10},
+  pages={777--780},
+  numpages={0},
+  year={2024},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://www.ewadirect.com/proceedings/ace/article/view/12438},
+  pdf={Clairvoyance.pdf},
 }
 
 @article{einstein1905molekularkinetischen,
