--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,7 @@
   publisher={American Association of Physics Teachers}
 }
 
-@article{PhysRev,
+@article{PhysRev.47.777,
   abbr={IMECE},
   title={Nonlinear Vibration and Bifurcations of  a Bending-Twisting Rotor System},
   author={Yuanhao, Chen and Bin, Chen and Xinya, Wang and Yeyin, Xu and Tieyan, Wang},
@@ -45,7 +45,7 @@
   numpages={0},
   year={2024},
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  html={#},
   pdf={Nonlinear.pdf},
 }
 
