--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,6 +47,10 @@
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
   html={#},
   pdf={Nonlinear.pdf},
+  dimensions={true},
+  google_scholar_id={qyhmnyLat1gC},
+  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
+  selected={true}
 }
 
 @article{Rhythms,
