--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -64,7 +64,7 @@
   numpages={0},
   year={2024},
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  html={#},
   pdf={Rhythms.pdf},
 }
 
