--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 
 @book{einstein1956investigations,
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement1},
+  title={Investigations on the Theory of the Brownian Movement},
   author={Einstein, Albert},
   year={1956},
   publisher={Courier Corporation},
