--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@
   numpages={0},
   year={2024},
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={#},
+  html={https://event.asme.org/IMECE},
   pdf={Nonlinear.pdf},
   dimensions={true},
   google_scholar_id={qyhmnyLat1gC},
@@ -37,7 +37,7 @@
   numpages={0},
   year={2024},
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={#},
+  html={https://event.asme.org/IMECE},
   pdf={Rhythms.pdf},
 }
 
