--- a/_posts/2015-07-15-code.md
+++ b/_posts/2015-07-15-code.md
@@ -11,6 +11,6 @@ featured: true
 
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        <iframe id="myEmbedTwo" src="https://bluestar2333.github.io/assets/pdf/My trip to Japan.pdf" width=900 height=1000 />
+        <iframe id="myEmbedTwo" src="https://bluestar2333.github.io/assets/pdf/MyTripToJapan.pdf" width=900 height=1000 />
     </div>
 </div>
