--- a/_posts/2015-07-15-code.md
+++ b/_posts/2015-07-15-code.md
@@ -5,6 +5,7 @@ date: 2024-8-17 15:09:00
 description: A two-week study tour to Japan in the winter of 2019
 tags: Life Academic
 content: 5
+feed_content: 5
 #categories: sample-posts
 featured: true  # 是否置顶
 ---
