--- a/_posts/2015-07-15-code.md
+++ b/_posts/2015-07-15-code.md
@@ -7,6 +7,7 @@ tags: Life Academic
 content: 5
 feed_content: 5
 number_of_words: 5
+time_num: 5
 #categories: sample-posts
 featured: true  # 是否置顶
 ---
